@@ -1,3 +1,9 @@
+25 June 2008
+
+* Handle escaped keys properly (parse eg \033b into a single key code) and
+  use this to change copy mode next/previous work to M-f and M-b to match
+  emacs.
+
 24 June 2008
 
 * Next word (C-n/w) and previous word (C-b/b) in copy mode.
@@ -562,4 +568,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.139 2008-06-24 07:00:38 nicm Exp $
+$Id: CHANGES,v 1.140 2008-06-25 07:30:08 nicm Exp $
